--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,34 @@
 header{
     background-image: url(../image/background-top.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.header-content{
+    display: flex;
+    /*flex-direction: column-reverse;*/
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: var(--shadow);
+    /*height: 100vh;*/
+    min-height: 400px;
+}
+.header-text,.header-logo{
+    width: 50%;
+    width: 50%;
+    color: var(--white);
+    padding: 40px;
 }
 
+.header-logo{
+    text-align: center;
+}
+
+
+.header-logo img{
+    padding: 20px ;
+    background-color: var(--white);
+    border-radius: 50% ;
+}
 nav ul{
     display: flex ;
     justify-content: center;
@@ -9,4 +36,18 @@ nav ul{
 
 nav li{
     list-style: none;
+}
+.nav-top{
+    line-height: 40px;
+    background-color: var(--black);
+}
+.nav-top li a{
+    text-decoration: none;
+    color: var(--white);
+    padding: 10px 20px;
+}
+.nav-top li a:hover{
+    color: var(--gray);
+    background-color: var(--white);
+    border-bottom: solid 4px var(--gray);
 }
